Add updateclient
